--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=8.0",
-        "pecee/simple-router": "dev-master"
+        "pecee/simple-router": "dev-master",
+        "twig/twig": "3.x-dev"
     }
 }
