--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "php": ">=8.0",
         "pecee/simple-router": "dev-master",
         "twig/twig": "3.x-dev",
-        "dompdf/dompdf": "dev-master"
+        "dompdf/dompdf": "dev-master",
+        "digitalnature/php-ref": "dev-master"
     }
 }
