add new library

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "twig/twig": "3.x-dev",
         "dompdf/dompdf": "dev-master",
         "digitalnature/php-ref": "dev-master",
-        "verot/class.upload.php": "dev-master"
+        "verot/class.upload.php": "dev-master",
+        "phpmailer/phpmailer": "dev-master"
     }
 }
